fix: fix adaptive header icons and fortune module case and visibility promocode for repl pay

--- a/src/components/globals/header/Header.scss
+++ b/src/components/globals/header/Header.scss
@@ -72,7 +72,7 @@
       justify-content: center;
       align-items: center;
       gap: 8px;
-      @media (max-width: $md4 + px) {
+      @media (max-width: $md3 + px) {
         display: none;
       }
     }
@@ -83,7 +83,7 @@
       justify-content: center;
       align-items: center;
       gap: 8px;
-      @media (max-width: $md4 + px) {
+      @media (max-width: $md3 + px) {
         display: none;
       }
     }
@@ -104,7 +104,7 @@
   }
 
   &-mail {
-    @media (max-width: $md4 + px) {
+    @media (max-width: $md3 + px) {
       display: none;
     }
   }
@@ -114,7 +114,7 @@
 .mobile {
   &-left {
     display: none;
-    @media (max-width: $md4 + px) {
+    @media (max-width: $md3 + px) {
       display: flex;
       justify-content: center;
       align-items: center;
