--- a/src/pages/main/Main.scss
+++ b/src/pages/main/Main.scss
@@ -14,7 +14,7 @@
     flex-direction: column;
     gap: 100px;
     padding: 50px;
-    @media (max-width: $md4 + px) {
+    @media (max-width: $md3 + px) {
       gap: 50px;
       padding: 10px;
     }
